hphp/hack/test/typecheck/reified_generics/is-expression-generics-tuples.php.exp
File "is-expression-generics-tuples.php", line 13, characters 9-19:
Invalid `is` expression hint (Typing[4195])
File "is-expression-generics-tuples.php", line 13, characters 17-17:
The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
File "is-expression-generics-tuples.php", line 14, characters 9-22:
Invalid `is` expression hint (Typing[4195])
File "is-expression-generics-tuples.php", line 14, characters 12-12:
The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
File "is-expression-generics-tuples.php", line 15, characters 9-17:
Invalid `is` expression hint (Typing[4195])
File "is-expression-generics-tuples.php", line 15, characters 12-12:
The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
File "is-expression-generics-tuples.php", line 15, characters 15-15:
The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
File "is-expression-generics-tuples.php", line 16, characters 9-19:
Invalid `is` expression hint (Typing[4195])
File "is-expression-generics-tuples.php", line 16, characters 12-12:
The `is` operator cannot be used with _ in a tuple (use `mixed` instead)
